# solana-dashboard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml  update-and-deploy.yml  weekly-backtest.yml
config/: glossary.nl.json  indicators.yml  method_versions.yml  settings.yml  sources.yml  token_universe.yml
data/: README.md
data/curated/: signaalonderzoek.parquet
data/ledger/: predictions.jsonl
docs/: ARCHITECTURE.md  BACKTEST.md  DATA_DICTIONARY.md  DATA_SOURCES.md  DECISIONS.md  GLOSSARY.md  LIMITATIONS.md  METHODOLOGY.md  PAGES_SETUP.md
schemas/: backtest.schema.json  dashboard.schema.json  outcome.schema.json  prediction.schema.json  source_status.schema.json
scripts/: build_site.py  check_pages_sync.py  generate_predictive_power.py  migrate_signal_research.py  prepare_pages_artifact.py  smoke_test.py  update_data.py  validate_outputs.py
site/: 404.html  accessibility.js  app.js  build-version.js  charts.js  glossary.js  index.html  position.js  styles.css
site/data/: analog_distribution.json  backtest_periods.json  backtest_summary.json  build_info.json  calibration.json  current_analogs.json  dashboard.json  glossary.json  interpretation.json  (+10 more)
tests/: test_analogs.py  test_backtest.py  test_features.py  test_json_schemas.py  test_ledger.py  test_llm_interpretation.py  test_no_lookahead.py  test_overview.py  test_price_consensus.py  test_robust_statistics.py  test_scoring.py  test_signal_research.py  test_site_build.py
(+31 files in other folders)
